--- a/css/style.css
+++ b/css/style.css
@@ -52,14 +52,14 @@ a:active {
 
 .form form input {
     width: 100%;
-    height: 3.2rem;
+    height: 3.6rem;
     outline: none;
     padding-left: .8rem;
     border: 1px solid #333;
 }
 
 .form form button {
-    height: 3.2rem;
+    height: 3.6rem;
     padding: 0 .8rem;
 }
 
@@ -72,23 +72,45 @@ a:active {
 }
 
 
+/* Geral */
+
+.area {
+    color: #666;
+}
+
+.name {
+    white-space: nowrap;
+}
+
+.color {
+    display: block;
+    border-radius: 50%;
+    height: 1.6rem;
+    width: 1.6rem;
+    border: 1px solid #ccc;
+}
+
+/* Checkpoints */
+
 
 .checkpoints {
     height: 7rem;
     border: 1px solid #ccc;
-    margin: 0 auto 5px;
+    margin: 0 auto .4rem;
     padding: .8rem;
     display: flex;
     align-items: start;
     gap: .4rem;
     overflow-x: scroll;
+    background-color: #fff;
 }
 
 .checkpoints>div {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid #ccc;
+    border: 1px solid #aaa;
+    background-color: #fafafa;
     padding: .4rem;
     gap: .8rem;
     cursor: pointer;
@@ -99,26 +121,14 @@ a:active {
     background-color: #eee;
 }
 
-.checkpoints div .color {
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    border: 1px solid #ccc;
-}
-
 .checkpoints div .center {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.checkpoints div .name {
-    white-space: nowrap;
-}
-
 .checkpoints div .area {
     font-size: 1rem;
-    color: #666;
 }
 
 .checkpoints .point .btn-remove {
@@ -132,17 +142,18 @@ a:active {
 
 
 
-/* Main Dashboard */
+/* Nav-links */
 
 .nav-links {
     display: flex;
 }
 
 .nav-links a {
-    padding: .8rem 1.6rem;
+    padding: .8rem 1.4rem;
     cursor: pointer;
     display: block;
     transition: .4s;
+    white-space: nowrap;
 }
 
 .nav-links a.active {
@@ -155,22 +166,23 @@ a:active {
     top: 1px;
 }
 
-
 .content {
     overflow-x: hidden;
     scroll-behavior: smooth;
     scrollbar-width: none;
     display: flex;
-    gap: 2rem;
+    border: 1px solid #ccc;
 }
 
 .content>div {
     flex: 1 0 100%;
     height: 40rem;
-    display: block;
-    border: 1px solid #ccc;
     background-color: #fff;
+    padding: 4rem 2rem;
+    border: .4rem solid #fff;
 }
+
+
 
 /* Dashboard */
 
@@ -197,20 +209,14 @@ a:active {
 /* Graphics */
 
 .content .graphics {
-    padding: 4rem 2rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    overflow-y: scroll;
+    overflow-x: scroll;
 }
 
 .content .graphics .name {
     font-size: 1.8rem;
-}
-
-.content .graphics .area {
-    font-size: 1.4rem;
-    color: #666;
 }
 
 .content .graphics .width {
@@ -218,26 +224,24 @@ a:active {
     height: .4rem;
     border-radius: .4rem;
     margin-top: .4rem;
+
 }
 
 
 /* Total Area */
 
 .content .totalArea {
-    padding: 4rem 2rem;
     overflow-y: scroll;
+    overflow-x: scroll;
 }
 
 .content .totalArea .block {
-    width: 80%;
+    width: 90%;
     height: 2.4rem;
     margin-top: 2rem;
     display: flex;
 }
 
-.content .totalArea .block .part {
-    height: 100%;
-}
 
 .content .totalArea .percent {
     margin-top: 2rem;
@@ -250,23 +254,17 @@ a:active {
     display: flex;
     align-items: center;
     gap: .8rem;
+    flex-wrap: wrap;
 }
 
 .content .totalArea .percent .item .color {
-    display: block;
     height: 1.2rem;
     width: 1.2rem;
-    border-radius: 50%;
-    border: 1px solid #ccc;
 }
 
 
 .content .totalArea .percent .item .name {
     font-size: 2rem;
-}
-
-.content .totalArea .percent .item .area {
-    color: #666;
 }
 
 .content .totalArea .percent .item .per {
@@ -279,7 +277,7 @@ a:active {
 /* Statistics */
 
 .content .statistics {
-    padding: 4rem 2rem;
+    overflow-x: scroll;
 }
 
 .content .statistics .selected {
@@ -288,44 +286,33 @@ a:active {
     gap: .8rem;
 }
 
-.content .statistics .selected .color {
-    display: block;
-    height: 1.6rem;
-    width: 1.6rem;
-    border-radius: 50%;
-    border: 1px solid #ccc;
-}
-
 .content .statistics .list {
     display: flex;
     flex-direction: column;
     gap: .8rem;
     margin-top: 1.6rem;
-    padding-left: 2rem;
+    padding-left: 1.6rem;
 }
 
 .content .statistics .list li {
     display: flex;
     align-items: center;
     gap: .8rem;
+    flex-wrap: wrap;
 }
 
-.content .statistics .list .color {
-    display: block;
+.content .statistics .list .color,
+.content .statistics .all .color {
     height: .8rem;
     width: .8rem;
-    border-radius: 50%;
-    border: 1px solid #ccc;
 }
 
 .content .statistics .list .name {
     font-weight: bold;
-    font-size: 1.8rem;
     white-space: nowrap;
 }
 
 .content .statistics .list .area {
-    color: #666;
     font-size: 1.4rem;
 }
 
@@ -333,8 +320,9 @@ a:active {
     display: flex;
     align-items: center;
     gap: .8rem;
-    padding-left: 2rem;
-    margin-top: 1.6rem;
+    padding-left: 1.6rem;
+    margin-top: .8rem;
+    flex-wrap: wrap;
 }
 
 .content .statistics .all .name {
@@ -342,18 +330,6 @@ a:active {
     font-size: 1.8rem;
 }
 
-.content .statistics .all .area {
-    color: #666;
-    font-size: 1.4rem;
-}
-
-.content .statistics .all .color {
-    display: block;
-    height: .8rem;
-    width: .8rem;
-    border-radius: 50%;
-    border: 1px solid #ccc;
-}
 
 @media screen and (max-width:540px) {
     html {
@@ -361,12 +337,16 @@ a:active {
     }
 
     .content>div {
-        height: 420px;
+        height: 400px;
     }
 }
 
 @media screen and (max-width:414px) {
     html {
         font-size: 50%;
+    }
+
+    .content>div {
+        padding: 2rem;
     }
 }
