--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ a:active {
 
 .area {
     color: #666;
+    white-space: nowrap;
 }
 
 .name {
@@ -282,6 +283,7 @@ a:active {
 
 .content .statistics .selected {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: .8rem;
 }
