--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,36 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    list-style: none;
+    text-decoration: none;
+}
+
+:root {
+    --gray-color-01: #f9fafb;
+    --gray-color-02: #f0f2f4;
+    --gray-color-03: #eaedf0;
+    --gray-color-04: #dfe3e7;
+    --gray-color-05: #ced4da;
+    --gray-color-06: #adb5bd;
+    --gray-color-07: #878f97;
+    --gray-color-08: #484f56;
+    --gray-color-09: #353b41;
+    --gray-color-10: #22262a;
+    --error-color: #a43;
 }
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body {
     font-size: 1.6rem;
-    background-color: #f5f5f5;
+    background-color: var(--gray-color-01);
 }
 
 .container {
-    max-width: 768px;
-    padding: 1.2rem;
+    max-width: 912px;
+    padding: 0 1.2rem;
     margin: auto;
 }
 
@@ -25,20 +40,51 @@ body {
     display: none;
 }
 
-a {
-    color: #333;
-    text-decoration: none;
+
+
+.anuncio {
+    background-color: #fff;
+    border: 1px solid var(--gray-color-05);
+    min-height: 9rem;
 }
 
-a:active {
-    color: #666;
+
+
+
+/* Header */
+
+.header {
+    margin-top: .8rem;
+}
+
+.header .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr));
+    align-items: center;
+    gap: 2rem;
+}
+
+.title {
+    font-family: sans-serif;
+}
+
+h1 {
+    font-size: 2.8rem;
+    font-weight: bold;
+    color: var(--gray-color-10);
+}
+
+h2 {
+    font-size: 2.4rem;
+    margin-top: .8rem;
+    color: var(--gray-color-10);
 }
 
 
 /* Form */
 
 .form {
-    padding: .8rem 0;
+    margin: .4rem 0;
     position: relative;
 }
 
@@ -55,27 +101,38 @@ a:active {
     height: 3.6rem;
     outline: none;
     padding-left: .8rem;
-    border: 1px solid #333;
+    border: 1px solid var(--gray-color-05);
+}
+
+
+
+.form form input::placeholder {
+    font-size: 1.4rem;
 }
 
 .form form button {
+    font-size: 1.6rem;
     height: 3.6rem;
     padding: 0 .8rem;
+    cursor: pointer;
+    background-color: #f1f1f1;
+    border: 1px solid var(--gray-color-05);
+    color: var(--gray-color-08);
 }
 
 .form form .msg {
     position: absolute;
     bottom: -5px;
     left: 1px;
-    font-size: 1.4rem;
-    color: #a33;
+    font-size: 1.3rem;
+    color: var(--error-color);
 }
 
 
 /* Geral */
 
-.area {
-    color: #666;
+.params {
+    color: var(--gray-color-08);
     white-space: nowrap;
 }
 
@@ -88,7 +145,7 @@ a:active {
     border-radius: 50%;
     height: 1.6rem;
     width: 1.6rem;
-    border: 1px solid #ccc;
+    border: 1px solid var(--gray-color-05);
 }
 
 /* Checkpoints */
@@ -96,9 +153,9 @@ a:active {
 
 .checkpoints {
     height: 7rem;
-    border: 1px solid #ccc;
+    border: 1px solid var(--gray-color-05);
     margin: 0 auto .4rem;
-    padding: .8rem;
+    padding: .4rem;
     display: flex;
     align-items: start;
     gap: .4rem;
@@ -128,7 +185,7 @@ a:active {
     align-items: center;
 }
 
-.checkpoints div .area {
+.checkpoints div .params {
     font-size: 1rem;
 }
 
@@ -138,7 +195,7 @@ a:active {
 }
 
 .checkpoints .point .btn-remove:hover {
-    color: #a33;
+    color: var(--error-color);
 }
 
 
@@ -149,17 +206,21 @@ a:active {
     display: flex;
 }
 
-.nav-links a {
+.nav-links button {
     padding: .8rem 1.4rem;
     cursor: pointer;
     display: block;
+    font-size: 1.6rem;
     transition: .4s;
     white-space: nowrap;
+    background-color: transparent;
+    border: none;
+    color: var(--gray-color-08);
 }
 
-.nav-links a.active {
+.nav-links button.active {
     background-color: #fff;
-    border: 1px solid #ccc;
+    border: 1px solid var(--gray-color-05);
     z-index: 2;
     border-bottom-color: transparent;
     transition: .4s;
@@ -167,21 +228,26 @@ a:active {
     top: 1px;
 }
 
+/* Content */
+
 .content {
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
-    display: flex;
-    border: 1px solid #ccc;
+    border: 1px solid var(--gray-color-05);
+    margin-bottom: .4rem;
 }
 
 .content>div {
     flex: 1 0 100%;
-    height: 40rem;
+    height: 50rem;
     background-color: #fff;
-    padding: 4rem 2rem;
+    padding: 4rem 2.8rem;
     border: .4rem solid #fff;
+    display: none;
 }
+
+.content>div.show {
+    display: block;
+}
+
 
 
 
@@ -204,16 +270,21 @@ a:active {
 }
 
 .dashboard .box:hover {
-    outline: 1px solid #a33;
+    outline: 1px solid var(--error-color);
 }
 
 /* Graphics */
 
 .content .graphics {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
     overflow-x: scroll;
+}
+
+.content .graphics .list {
+    margin-top: 1.6rem;
+}
+
+.content .graphics .graphic {
+    margin-bottom: .8rem;
 }
 
 .content .graphics .name {
@@ -225,54 +296,8 @@ a:active {
     height: .4rem;
     border-radius: .4rem;
     margin-top: .4rem;
-
 }
 
-
-/* Total Area */
-
-.content .totalArea {
-    overflow-y: scroll;
-    overflow-x: scroll;
-}
-
-.content .totalArea .block {
-    width: 90%;
-    height: 2.4rem;
-    margin-top: 2rem;
-    display: flex;
-}
-
-
-.content .totalArea .percent {
-    margin-top: 2rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1.6rem;
-}
-
-.content .totalArea .percent .item {
-    display: flex;
-    align-items: center;
-    gap: .8rem;
-    flex-wrap: wrap;
-}
-
-.content .totalArea .percent .item .color {
-    height: 1.2rem;
-    width: 1.2rem;
-}
-
-
-.content .totalArea .percent .item .name {
-    font-size: 2rem;
-}
-
-.content .totalArea .percent .item .per {
-    font-size: 1.8rem;
-    font-family: sans-serif;
-    font-weight: bold;
-}
 
 
 /* Statistics */
@@ -305,8 +330,8 @@ a:active {
 
 .content .statistics .list .color,
 .content .statistics .all .color {
-    height: .8rem;
-    width: .8rem;
+    height: 1rem;
+    width: 1rem;
 }
 
 .content .statistics .list .name {
@@ -314,7 +339,7 @@ a:active {
     white-space: nowrap;
 }
 
-.content .statistics .list .area {
+.content .statistics .list .params {
     font-size: 1.4rem;
 }
 
@@ -333,13 +358,122 @@ a:active {
 }
 
 
+/* Total */
+
+.content .total {
+    overflow-y: scroll;
+    overflow-x: scroll;
+}
+
+.content .total .block {
+    width: 90%;
+    height: 2.4rem;
+    margin-top: 2rem;
+    display: flex;
+}
+
+
+.content .total .percent {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+}
+
+.content .total .percent .item {
+    display: flex;
+    align-items: center;
+    gap: .8rem;
+    flex-wrap: wrap;
+}
+
+.content .total .percent .item .color {
+    height: 1.2rem;
+    width: 1.2rem;
+}
+
+
+.content .total .percent .item .name {
+    font-size: 2rem;
+}
+
+.content .total .percent .item .per {
+    font-size: 1.8rem;
+    font-family: sans-serif;
+    font-weight: bold;
+}
+
+
+/* Texts */
+
+.lastest-updated {
+    margin-top: .4rem;
+    color: #626462;
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+    gap: .8rem;
+    margin: 1.6rem 0 2.4rem;
+}
+
+.text ul {
+    padding-left: 2rem;
+}
+
+/* Links */
+
+.links {
+    margin: 1.6rem 0;
+
+}
+
+.links .row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: .8rem;
+    margin-top: .8rem;
+}
+
+.links a {
+    border: 1px solid #222;
+    color: #f5f5f5;
+    background-color: #565656;
+    padding: .4rem .8rem;
+    transition: .4s;
+}
+
+.links a:hover {
+    border-color: #565656;
+    background-color: #222;
+}
+
+
+.footer {
+    text-align: center;
+    margin-top: 1.6rem;
+    padding: 0 1.4rem;
+
+}
+
+
+.footer .container {
+    padding: 1.6rem 0;
+    border-top: 1px solid var(--gray-color-07);
+}
+
 @media screen and (max-width:540px) {
     html {
         font-size: 55%;
     }
 
     .content>div {
-        height: 400px;
+        height: 44rem;
+    }
+
+    .nav-links button {
+        font-size: 1.4rem;
     }
 }
 
