--- a/css/style.css
+++ b/css/style.css
@@ -41,20 +41,17 @@ body {
 }
 
 
-
 .anuncio {
-    /* background-color: #fff; */
-    /* border: 1px solid var(--gray-color-07); */
-    min-height: 2rem;
+    width: 100%;
+    max-height: 10rem;
 }
-
 
 
 
 /* Header */
 
 .header {
-    margin-top: 1.6rem;
+    margin-block: 1.6rem;
 }
 
 .header .container {
@@ -70,9 +67,6 @@ h2 {
     font-family: sans-serif;
 }
 
-.header .anuncio {
-    width: 40rem;
-}
 
 
 
@@ -490,14 +484,6 @@ h2 {
 .footer .container {
     padding: 1.6rem 0;
     border-top: 1px solid var(--gray-color-07);
-}
-
-
-
-@media screen and (max-width:800px) {
-    .header .anuncio {
-        width: 100%;
-    }
 }
 
 @media screen and (max-width:540px) {
