without border color

--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,13 @@ html {
     scroll-behavior: smooth;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
 }
 
 body {
     font-size: 1.6rem;
     background-color: #f5f5f5;
-    color: #112233;
+    color: #011627;
 }
 
 .container {
@@ -30,10 +30,10 @@ body {
     display: none;
 }
 
-
 .anuncio {
     width: 100%;
     max-height: 10rem;
+    padding-inline: .4rem;
 }
 
 
@@ -77,7 +77,7 @@ body {
     height: 3.6rem;
     outline: none;
     padding-left: 1.2rem;
-    border: 1px solid red;
+    border: 1px solid #ccc;
 }
 
 .form form input::placeholder {
@@ -89,6 +89,9 @@ body {
     height: 3.6rem;
     padding: 0 .8rem;
     cursor: pointer;
+    border-color: #ccc;
+    border: none;
+    border: 1px solid #ccc;
 }
 
 
@@ -412,7 +415,11 @@ body {
     padding-left: 2rem;
 }
 
-
+.description ul i {
+    margin-inline: .4rem;
+    position: relative;
+    top: .2rem;
+}
 
 
 /* Links */
@@ -445,7 +452,7 @@ body {
 
 .footer .container {
     padding: 1.6rem 0;
-    border-top: 1px solid #333;
+    border-top: 1px solid #ccc;
 }
 
 
